--- a/public/civil/sem1/AP.html
+++ b/public/civil/sem1/AP.html
@@ -90,7 +90,17 @@
 
         </div>
     </main>
-
+<!-- add -->
+<div style="display: flex ; justify-content: center; align-items: center;"></div>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
@@ -139,7 +149,17 @@
         </a>
 
     </div>
-
+<!-- add -->
+<div style="display: flex ; justify-content: center; align-items: center;"></div>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Sem-2 -->
     <h1 class="kl789123">
         Semester-2
@@ -266,6 +286,17 @@
         </a>
 
     </div>
+    <!-- add -->
+<div style="display: flex ; justify-content: center; align-items: center;"></div>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Sem4 -->
     <h2 class="kl789123">
         Semester-4
@@ -375,6 +406,17 @@
             </div>
         </a>
     </div> -->
+    <!-- add -->
+<div style="display: flex ; justify-content: center; align-items: center;"></div>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
     <!-- Footer -->
     <footer id="footer">
