--- a/public/computer/sem1/BCP.html
+++ b/public/computer/sem1/BCP.html
@@ -94,6 +94,15 @@
         </div>
     </main>
 
+<ins class="adsbygoogle"
+    style="display: flex ; justify-content: center; align-items: center;"
+    data-ad-format="fluid"
+    data-ad-layout-key="-7m+eo+1+3-3"
+    data-ad-client="ca-pub-4211827566541334"
+    data-ad-slot="8154071272"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
