--- a/public/civil/sem1/BEDG.html
+++ b/public/civil/sem1/BEDG.html
@@ -92,7 +92,17 @@
 
         </div>
     </main>
+<!-- add -->
 
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
@@ -143,7 +153,17 @@
         </a>
 
     </div>
+<!-- add -->
 
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Sem-2 -->
     <h1 class="kl789123">
         Semester-2
@@ -270,6 +290,17 @@
         </a>
 
     </div>
+    <!-- add -->
+
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Sem4 -->
     <h2 class="kl789123">
         Semester-4
@@ -381,6 +412,17 @@
     </div> -->
 
     <!-- Footer -->
+    <!-- add -->
+
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <footer id="footer">
     </footer>
 
