--- a/public/civil/sem1/homepage.html
+++ b/public/civil/sem1/homepage.html
@@ -30,6 +30,17 @@
             <a id="atnvli953" href="/civil/sem1/homepage.html">Civil Sem-1</a>
         </div>
     </div>
+    <!-- add -->
+
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+     <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
     <main>
         <!-- From  -->
         <span class="infdd">
