--- a/public/civilhomepage.html
+++ b/public/civilhomepage.html
@@ -47,11 +47,18 @@
         </div>
         </div>
         <h1 class="kl789123">Select Semester </h1>
+        <ins class="adsbygoogle" style="display: flex ; justify-content: center; align-items: center;"
+        data-ad-client="ca-pub-4211827566541334" data-ad-slot="4668453535" data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
 
         <div aria-label="main content " id="main" class="ab12345">
             <div class="maniwrraper">
                 <a class="navlink" href="/civil/sem1/homepage.html">Sem-1</a>
                 <a class="navlink" href="/civil/sem2/homepage.html">Sem-2</a>
+               
                 <a class="navlink" href="/civil/sem3/homepage.html">Sem-3</a>
                 <a class="navlink" href="/civil/sem4/homepage.html">Sem-4</a>
                 <a class="navlink" href="/civil/sem5/homepage.html">Sem-5</a>
@@ -61,6 +68,7 @@
         </div>
 
     </main>
+   
     <footer id="footer">
     </footer>
 
