--- a/public/computer/sem1/environmentandsustainability.html
+++ b/public/computer/sem1/environmentandsustainability.html
@@ -91,7 +91,12 @@
 
         </div>
     </main>
-
+    <ins class="adsbygoogle" style="display: flex ; justify-content: center; align-items: center;"
+    data-ad-client="ca-pub-4211827566541334" data-ad-slot="4668453535" data-ad-format="auto"
+    data-full-width-responsive="true"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Recommended -->
     <h1 class="kl789123">
         Recommnded Acording to your Semester
