--- a/public/computer/sem1/homepage.html
+++ b/public/computer/sem1/homepage.html
@@ -132,7 +132,12 @@
                 </tr>
             </table>
         </div>
-
+        <ins class="adsbygoogle" style="display: flex ; justify-content: center; align-items: center;"
+        data-ad-client="ca-pub-4211827566541334" data-ad-slot="4668453535" data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
         <!-- Sem-1 -->
         <div aria-label="main content " class="ab12345">
             <!-- Es  -->
