--- a/public/electricalhomepage.html
+++ b/public/electricalhomepage.html
@@ -46,7 +46,12 @@
         </div>
         </div>
         <h1 class="kl789123">Select Semester </h1>
-
+        <ins class="adsbygoogle" style="display: flex ; justify-content: center; align-items: center;"
+        data-ad-client="ca-pub-4211827566541334" data-ad-slot="4668453535" data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
         <div aria-label="main content " id="main" class="ab12345">
             <div class="maniwrraper">
                 <a class="navlink" href="/electrical/sem1/homepage.html">Sem-1</a>
