--- a/public/it/sem1/pythonprogramming.html
+++ b/public/it/sem1/pythonprogramming.html
@@ -95,19 +95,19 @@
         </div>
     </main>
 <!-- add -->
-<div class="addc">
-
+>
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display: flex ; justify-content: center; align-items: center;"
      data-ad-client="ca-pub-4211827566541334"
      data-ad-slot="4668453535"
      data-ad-format="auto"
      data-full-width-responsive="true"></ins>
-</div>
 
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+
+
     <!-- Learn  -->
     <h1 class="kl789123">learn Python Before Your Friends</h1>
     <div class="la75984">
@@ -169,6 +169,18 @@
             </div>
         </a>
     </div>
+    <!-- add -->
+>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Sem-2 -->
     <h1 class="kl789123">Semester-2</h1>
     <div class="ab12345">
@@ -293,6 +305,18 @@
             </div>
         </a>
     </div>
+    <!-- add -->
+>
+<ins class="adsbygoogle"
+     style="display: flex ; justify-content: center; align-items: center;"
+     data-ad-client="ca-pub-4211827566541334"
+     data-ad-slot="4668453535"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <!-- Footer -->
     <footer id="footer">
     </footer>
