--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="robots" content="index, follow">
     <meta name="google-adsense-account" content="ca-pub-1055671396413676">
     <meta name="keywords"
-        content="Gtu books free download , gtu study material, download diploma gtu  books  , download gtu diploma ,gtu Material, it, computer , electrical, civil, mechanical, Technological University,Old Papers , Exam Papers , Syllabus , Paper Solution, BE (Bachelor of Engineering), Sem 1, Sem 3,Sem 4, Sem 5, Sem 2 , khudkibook gtu , gtu khudkibook, khudkibook">
+        content="Gtu books free download ,khudkibook , gtu study material, download diploma gtu  books  , download gtu diploma ,gtu Material, it, computer , electrical, civil, mechanical, Technological University,Old Papers , Exam Papers , Syllabus , Paper Solution, BE (Bachelor of Engineering), Sem 1, Sem 3,Sem 4, Sem 5, Sem 2 , khudkibook gtu , gtu khudkibook, khudkibook">
     <meta name="audience" content="Everyone">
     <meta name="description" content="Download GTU Books, Syllabus, Papers, Practical PDF for Free| GTU study material | Diploma Engineering 
-        I.T | Computer | Civil | Mechanical | Electrical">
+        I.T | Computer | Civil | Mechanical | Electrical - KhudKibook">
     <meta charset="UTF-8">
     <meta name="google-site-verification" content="cQwdBWIbhba4RItxT8gHfbwOF3U6Q9qQtujUT2CtO2s" />
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1055671396413676"
